{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 99,
  "lineage": "0c1b3974-6906-a0d7-a6bc-f518bfe72389",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cc66c74f259d035",
            "arn": "arn:aws:ec2:us-west-2:003489201414:elastic-ip/eipalloc-05cc66c74f259d035",
            "association_id": "eipassoc-0ab0e472583d8119c",
            "domain": "vpc",
            "id": "eipalloc-05cc66c74f259d035",
            "instance": "i-0c196295504f26c8b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09f9686f0965ece3d",
            "private_dns": "ip-10-0-1-96.us-west-2.compute.internal",
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-34-223-220-51.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.220.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minecraft-eip"
            },
            "tags_all": {
              "Name": "minecraft-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.mc",
            "aws_security_group.mc_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec1bf4a8f92e7bd1",
            "arn": "arn:aws:ec2:us-west-2:003489201414:instance/i-0c196295504f26c8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c196295504f26c8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-mc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f9686f0965ece3d",
            "private_dns": "ip-10-0-1-96.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-44-246-121-217.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.121.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4d988fe89e55a0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f01f4a46a91755e3",
            "tags": {
              "Name": "minecraft-server"
            },
            "tags_all": {
              "Name": "minecraft-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0554a30a595c9aefe"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mc_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:003489201414:internet-gateway/igw-054503be424d88248",
            "id": "igw-054503be424d88248",
            "owner_id": "003489201414",
            "tags": {
              "Name": "minecraft-igw"
            },
            "tags_all": {
              "Name": "minecraft-igw"
            },
            "vpc_id": "vpc-03de55682b3a5a6a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054503be424d88248",
            "id": "r-rtb-0ce078c78304cd0711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce078c78304cd071",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:003489201414:route-table/rtb-0ce078c78304cd071",
            "id": "rtb-0ce078c78304cd071",
            "owner_id": "003489201414",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "minecraft-public-rt"
            },
            "tags_all": {
              "Name": "minecraft-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de55682b3a5a6a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0cacfa19f6df9db",
            "route_table_id": "rtb-0ce078c78304cd071",
            "subnet_id": "subnet-0f01f4a46a91755e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:003489201414:security-group/sg-0554a30a595c9aefe",
            "description": "Allow Minecraft and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0554a30a595c9aefe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              }
            ],
            "name": "minecraft-sg",
            "name_prefix": "",
            "owner_id": "003489201414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minecraft-sg"
            },
            "tags_all": {
              "Name": "minecraft-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de55682b3a5a6a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:003489201414:subnet/subnet-0f01f4a46a91755e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f01f4a46a91755e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003489201414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft-public-subnet"
            },
            "tags_all": {
              "Name": "minecraft-public-subnet"
            },
            "vpc_id": "vpc-03de55682b3a5a6a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:003489201414:vpc/vpc-03de55682b3a5a6a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07adf23dbecfbdcc0",
            "default_route_table_id": "rtb-0ff39da07bb494295",
            "default_security_group_id": "sg-0dffe831d7ba8c92d",
            "dhcp_options_id": "dopt-0538acc30ce401535",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03de55682b3a5a6a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff39da07bb494295",
            "owner_id": "003489201414",
            "tags": {
              "Name": "minecraft-vpc"
            },
            "tags_all": {
              "Name": "minecraft-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}